ingress/https-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  tls:
  - hosts:
    - ${URL}
    secretName: ${CERTIFICATE_SECRET_NAME}
  rules:
  - host: ${URL}
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
